# BuildingPanic

./: .gitignore  CMakeLists.txt  README.md
assets/midi/: BPBGM01.MID  BPBGM02.MID  BPBGM03.MID  BPBGM04.MID  BPBGM05.MID  BPBGM06.MID  BPBGM07.MID
assets/sounds/: BPANIC.EXE_WAVE_SE_BIKE_FUKASHI_1041  BPANIC.EXE_WAVE_SE_BIKE_SLIP_1041  BPANIC.EXE_WAVE_SE_BOSS4_JET_1041  BPANIC.EXE_WAVE_SE_BOSS5_MOVE_1041  BPANIC.EXE_WAVE_SE_DORON_RUN_1041  BPANIC.EXE_WAVE_SE_ENEMY_JUMP_1041  BPANIC.EXE_WAVE_SE_FALL2_1041  BPANIC.EXE_WAVE_SE_FALL_1041  BPANIC.EXE_WAVE_SE_GET_SCORE_1041  BPANIC.EXE_WAVE_SE_HIT_1041  BPANIC.EXE_WAVE_SE_HIT_ELEC_1041  BPANIC.EXE_WAVE_SE_HIT_FALL_1041  BPANIC.EXE_WAVE_SE_HIT_OIL_1041  BPANIC.EXE_WAVE_SE_LAND_1041  BPANIC.EXE_WAVE_SE_PIYO2_1041  BPANIC.EXE_WAVE_SE_PIYO_1041  BPANIC.EXE_WAVE_SE_SELECT_1041  BPANIC.EXE_WAVE_SE_WALL_CRUSH_1041
scripts/: IDA_BP.py  dumpTilemeta.py
src/: GameManager.hpp  Globals.cc  Globals.hpp  SDL2_Interface.cc  SDL2_Interface.hpp  main.cc
src/Entity/: Entity.cc  Entity.hpp  EntityLayer.hpp  Entity_base.cc  Entity_base.hpp  StaticPictureEntity.cc  StaticPictureEntity.hpp
src/Input/: Ingame_InputProcessor.cc  Ingame_InputProcessor.hpp  InputProcessorBase.cc  InputProcessorBase.hpp  LogoScene_InputProcessor.cc  LogoScene_InputProcessor.hpp  MenuHandler_InputProcessor.cc  MenuHandler_InputProcessor.hpp  MenuScene_InputProcessor.cc  MenuScene_InputProcessor.hpp
src/Manager/: BitmapResourceManager.cc  BitmapResourceManager.hpp  GameManager.cc  GameManager.hpp  SaveManager.cc  SaveManager.hpp  SoundResourceManager.cc  SoundResourceManager.hpp
src/Resource/: Bitmap.cc  Bitmap.hpp  BitmapCacheSurface.cc  BitmapCacheSurface.hpp  OffscreenSurface.cc  OffscreenSurface.hpp  Sound.cc  Sound.hpp
src/Scene/: CharacterChoiceScene.cc  CharacterChoiceScene.hpp  GameScene.cc  GameScene.hpp  LogoScene.cc  LogoScene.hpp  MenuScene.cc  (+1 more)
(+57 files in other folders)
